welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:25: error: ':' expected but ')' found.
def isFacingTrail(couleur)
                         ^SlugSnail:46: error: identifier expected but '}' found.
}
^